tests/rosetta/transpiler/Pascal/anagrams-deranged-anagrams.error
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/rosetta/transpiler/Pascal/anagrams-deranged-anagrams.pas
anagrams-deranged-anagrams.pas(118,10) Warning: Local variable "main_m" does not seem to be initialized
anagrams-deranged-anagrams.pas(123,29) Error: Incompatible type for arg no. 2: Got "LongInt", expected "ShortString"
anagrams-deranged-anagrams.pas(125,14) Error: Incompatible types: got "LongInt" expected "ShortString"
anagrams-deranged-anagrams.pas(122,7) Error: Incompatible types: got "ShortString" expected "LongInt"
anagrams-deranged-anagrams.pas(148) Fatal: There were 3 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
